# updatedLogicExamCert

./: Award.cpp  Award.h  Base_Event.cpp  Base_Event.h  CMakeLists.txt  Date.cpp  Date.h  Exam.cpp  Exam.h  Exam_Event.cpp  Exam_Event.h  IPrintable.cpp  IPrintable.h  Mark.cpp  Mark.h  Person.cpp  Person.h  Place.cpp  Place.h  Printer.cpp  Printer.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp
